2002-07-16  Nick Clifton  <nickc@cambridge.redhat.com>

	* NEWS: Add 'Changes in 2.13'.

2002-07-10  Jakub Jelinek  <jakub@redhat.com>

	* readelf.c (get_dynamic_type): Handle DT_GNU_PRELINKED,
	DT_GNU_CONFLICT* and DT_GNU_LIBLISZ*.
	(get_section_type_name): Handle SHT_GNU_LIBLIST.
	(process_dynamic_segment): Handle DT_GNU_CONFLICTSZ,
	DT_GNU_LIBLISTSZ and DT_GNU_PRELINKED.
	(process_gnu_liblist): New.
	(process_file): Call it.

2002-07-03  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am (check-DEJAGNU): Revert 2002-06-25 change.
	* Makefile.in: Regenerate.

2002-07-02  Alan Modra  <amodra@bigpond.net.au>

	* budemang.c: New file, "demangle" function.
	* budemang.h: New file.
	* addr2line.c (translate_addresses): Use "demangle".
	* nm.c (print_symname): Likewise.
	* objdump.c (objdump_print_symname): Likewise.
	(dump_symbols): Likewise.  Also, don't use bfd_asymbol_name macro
	here since that obfuscates.
	* rdcoff.c: Don't #include demangle.h.
	* Makefile.am (CFILES): Add budemang.c, emul_aix.c,
	emul_vanilla.c.  Remove emul_$(EMULATION).c.  Sort.
	(HFILES): Add budemang.h.  Sort.
	(nm_new_SOURCES, objdump_SOURCES, addr2line_SOURCES): Add budemang.c.
	Run "make dep-am".
	* Makefile.in: Regenerate.

2002-07-01  Matt Thomas  <matt@3am-software.com>

	* readelf.c: Include "elf/vax.h".
	(guess_is_rela): Move EM_VAX from unknown to RELA case.
	(dump_relocations): Handle VAX relocations.
	(get_machine_flags): Handle VAX machine flags.

2002-06-29  Stephane Carrez  <stcarrez@nerim.fr>

	* readelf.c (dump_relocations): Handle 68HC11/68HC12 relocations.

2002-06-26  Nick Clifton  <nickc@cambridge.redhat.com>

	* MAINTAINERS: Remove Tom Rix from d10v and pcc maintainerships.

2002-06-26  Alan Modra  <amodra@bigpond.net.au>

	* nm.c (print_symname): When demangling, strip leading dots from
	symbol names to avoid confusing the demangler.

2002-06-25  H.J. Lu <hjl@gnu.org>

	* Makefile.am (check-DEJAGNU): Set LC_ALL=C and export it.
	* Makefile.in: Regenerated.
